@@ -16,6 +16,12 @@ I contacted AQL to discuss doing this and ask for some test SMS
 credits to assist with testing the module, and they were most
 helpful - thanks guys, you're a top company :)
 
+This initial release is fairly limited, but works, at least for UK
+mobiles... I haven't had the opportunity to test it with any non-UK
+mobiles.  If anybody from outside of the UK wants to be kind enough
+to help test it, please contact me.
+
+
 INSTALLATION
 
 To install this module use the standard routine:
